--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <span id="result">
                 </span>
             </div>
-
+           <p>Ⓒ Everyone Can Get Rich</p>
             
         </div>
     </body>
